--- a/components/imu_controller/CMakeLists.txt
+++ b/components/imu_controller/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "imu_controller.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "imu_controller_ext.c" "imu_controller.c"
+                    INCLUDE_DIRS "."
+                    REQUIRES driver)
