--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "imu_controller_ext.c" "main.c"
+idf_component_register(SRCS "main.c"
                     INCLUDE_DIRS ".")
 set(EXTRA_COMPONENT_DIRS "components/imu_controller"
                          "components/network_controller")
