--- a/components/imu_controller/CMakeLists.txt
+++ b/components/imu_controller/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "imu_controller.c"
                     INCLUDE_DIRS "."
-                    REQUIRES driver ESP-IDF-BMI270-Sensor-API)
+                    REQUIRES driver esp_timer ESP-IDF-BMI270-Sensor-API)
